# rust-cloudwatch-example

./: Cargo.toml
src/: cloud_watch_logger.rs  main.rs
