[package]
name = "tanshio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
log = { version = "0.4.17", features = ["std"] }
env_logger = "0.9.0"
pretty_env_logger = "0.4"
rusoto_cloudwatch = "0.48.0"
rusoto_core = "0.48.0"
tokio = "1.21.2"
rusoto_iam = "0.48.0"
rusoto_logs = "0.48.0"
rusoto_signature = "0.48.0"
chrono = "0.4.22"
again = "0.1.2"
